consistent approach for error handling